--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-theme="crimson" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
